css/style.css
@charset "UTF-8";
/* Color Constants */
/* Media Queries */
/* Colors */
@import url(all.css);
/*********/
/* Fonts */
/*********/
@font-face {
  font-family: 'Avenir-Light';
  src: url("../fonts/Avenir-Light.ttf"); }
/*******************/
/* Global Elements */
/*******************/
a {
  color: #5292FF;
  font-family: 'Avenir-Light', 'Montserrat', sans-serif; }

a > i.fab {
  color: #ffffff; }

a > i.fab:hover {
  color: #999999; }

a:hover {
  color: #999999;
  text-decoration: none; }

html {
  font-family: 'Montserrat', sans-serif;
  color: #ffffff; }

body {
  background-color: #0d0d0d;
  color: #ffffff;
  padding-top: 70px; }

footer {
  background-color: #000000; }

h1, h2, h3, h4, h5, h6 {
  font-family: 'Montserrat', sans-serif; }

h1 {
  font-weight: 800;
  text-transform: uppercase; }

nav {
  background-color: #0e1114;
  border-bottom: 1px solid rgba(235, 235, 235, 0.25); }

p {
  font-family: 'Avenir-Light', 'Montserrat', sans-serif;
  font-size: 14px;
  color: rgba(255, 255, 255, 0.75); }

strong {
  color: #ffffff; }

/***********/
/* Classes */
/***********/
.container {
  width: 100%;
  max-width: 100%;
  padding-left: 11%;
  padding-right: 11%; }

/* Utility */
.btn-rounded {
  border-radius: 10px; }

.placeholder {
  background-color: #efefef;
  border: 4px gray solid;
  padding: 15px; }

/* Articles */
.article-desc, .jumbotron-desc {
  color: #CACACA !important; }

.article-list-ver {
  list-style: none;
  padding-left: 0; }

.article-list-ver > li {
  padding-bottom: 10px; }

.article-img {
  height: auto;
  width: 100%;
  display: block; }

.article-img-lg {
  padding-bottom: 20px; }

.article-item {
  color: #ffffff; }

.article-item:hover {
  color: #999999;
  text-decoration: none; }

.article-more {
  color: #ebebeb; }

.article-more:hover {
  color: #ef0005; }

.article-section {
  font-weight: 200; }

.article-subtitle {
  font-family: 'Avenir-Light', 'Montserrat', sans-serif;
  text-transform: uppercase;
  color: #ef0005;
  font-weight: 400; }

p.article-subtitle {
  font-family: 'Avenir-Light', 'Montserrat', sans-serif;
  text-transform: uppercase;
  color: #ef0005;
  font-weight: 400;
  font-size: 14px;
  margin-bottom: 5px; }

.article-subtitle > i {
  font-family: 'Avenir-Light', 'Montserrat', sans-serif;
  color: rgba(235, 235, 235, 0.5);
  font-style: italic; }

.article-subtitle > i::before {
  content: "•";
  padding-left: 10px;
  padding-right: 10px; }

.article-title {
  color: #ffffff; }

/* Cards */
.card {
  background-color: rgba(235, 235, 235, 0); }

.card-body {
  padding-left: 0;
  padding-right: 0; }

.card-title, .card-text {
  color: #ffffff; }

.card-text {
  color: #CACACA; }

/* Images */
.captioned-img {
  position: relative; }

.captioned-img > p {
  margin-bottom: 0;
  padding-bottom: 0; }

.img-caption {
  text-align: center;
  display: block;
  position: absolute;
  bottom: 0;
  width: 100%;
  background-color: rgba(14, 17, 20, 0.8);
  font-size: 1.25rem;
  color: #ffffff; }

.img-banner-container {
  position: relative; }

.img-banner-container > img {
  width: 100vw;
  height: 250px;
  margin-left: calc(50% - 50vw);
  object-fit: cover;
  object-position: center top; }

.img-banner-title {
  position: absolute;
  bottom: 10%; }

/* Jumbostron */
.jumbotron {
  background-color: rgba(102, 102, 102, 0.3); }

.jumbotron-subtitle {
  font-family: 'Avenir-Light', 'Montserrat', sans-serif;
  color: #5292FF;
  text-transform: uppercase;
  font-weight: 300; }

.jumbotron-title {
  font-weight: 700;
  color: #ffffff; }

/* Navs */
.dropdown-menu {
  background-color: #666666; }

.dropdown-item {
  color: #ffffff; }

.nav-item {
  font-size: 20px; }

.navbar-dark .nav-item.active .nav-link {
  font-weight: 800; }

.nav-search {
  border: 1px solid rgba(235, 235, 235, 0.5);
  border-left: none;
  border-collapse: separate;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-top-right-radius: .5rem;
  border-bottom-right-radius: .5rem;
  background-color: #0e1114;
  color: #CACACA;
  height: 30px; }

.nav-search-btn {
  border: 1px solid rgba(235, 235, 235, 0.5);
  border-right: none;
  border-collapse: separate;
  border-top-left-radius: .5rem;
  border-bottom-left-radius: .5rem;
  background-color: #0e1114;
  color: #CACACA;
  height: 30px;
  margin-right: -5px; }

.social-links {
  list-style: none;
  display: inline-block;
  font-size: 22px;
  align-items: center;
  align-content: center; }

.social-links > li {
  display: inline-block;
  padding-right: 0.5rem; }

/***************/
/* Breakpoints */
/***************/
/* Desktop Queries */
@media screen and (min-width: 992px) {
  .collapse.navbar-collapse {
    margin-right: 10%; }

  .navbar-brand {
    margin-left: 10%; }

  .dropdown:hover .dropdown-menu {
    display: block;
    margin-top: 0; }

  /* Uniform Columns */
  .uni-header {
    min-height: 70px; }

  .uni-content {
    min-height: 200px; }

  .uni-footer {
    min-height: 100px; } }
/* Mobile Queries */
@media screen and (max-width: 992px) {
  .center-on-mobile {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    display: block; } }

/*# sourceMappingURL=style.css.map */

